// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlusMinusButton Component > adds song to a playlist when a playlist button is clicked 1`] = `
<DocumentFragment>
  <button
    aria-label="Add song"
    class="plusMinus-button"
  >
    <svg
      color="#afc188"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="color: rgb(175, 193, 136);"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="16"
      />
      <line
        x1="8"
        x2="16"
        y1="12"
        y2="12"
      />
    </svg>
  </button>
  <div
    class="playlist-modal-overlay "
  >
    <div
      class="playlist-modal-container"
    >
      <h3>
        Select a playlist to add "Test Song"
      </h3>
      <label
        class="feedback-message error"
      >
        Song is already in playlist.
      </label>
      <ul
        class="playlist-selection"
      >
        <li>
          <button>
            Test Playlist 🎵
          </button>
        </li>
      </ul>
      <button
        class="closeBtn"
      >
        Close
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlusMinusButton Component > alerts user if not logged in when adding a song 1`] = `
<DocumentFragment>
  <button
    aria-label="Add song"
    class="plusMinus-button"
  >
    <svg
      color="#afc188"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="color: rgb(175, 193, 136);"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="16"
      />
      <line
        x1="8"
        x2="16"
        y1="12"
        y2="12"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`PlusMinusButton Component > displays modal when add button is clicked 1`] = `
<DocumentFragment>
  <button
    aria-label="Add song"
    class="plusMinus-button"
  >
    <svg
      color="#afc188"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="color: rgb(175, 193, 136);"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="16"
      />
      <line
        x1="8"
        x2="16"
        y1="12"
        y2="12"
      />
    </svg>
  </button>
  <div
    class="playlist-modal-overlay "
  >
    <div
      class="playlist-modal-container"
    >
      <h3>
        Select a playlist to add "Test Song"
      </h3>
      <ul
        class="playlist-selection"
      >
        <li>
          <button>
            Test Playlist 🎵
          </button>
        </li>
      </ul>
      <button
        class="closeBtn"
      >
        Close
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PlusMinusButton Component > removes song from playlist when remove button is clicked 1`] = `
<DocumentFragment>
  <button
    aria-label="Remove song"
    class="plusMinus-button"
  >
    <svg
      color="#afc188"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="color: rgb(175, 193, 136);"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="8"
        x2="16"
        y1="12"
        y2="12"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`PlusMinusButton Component > renders the add button by default 1`] = `
<DocumentFragment>
  <button
    aria-label="Add song"
    class="plusMinus-button"
  >
    <svg
      color="#afc188"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="color: rgb(175, 193, 136);"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="16"
      />
      <line
        x1="8"
        x2="16"
        y1="12"
        y2="12"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`PlusMinusButton Component > renders the remove button if isInPlaylist is true 1`] = `
<DocumentFragment>
  <button
    aria-label="Remove song"
    class="plusMinus-button"
  >
    <svg
      color="#afc188"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="color: rgb(175, 193, 136);"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="8"
        x2="16"
        y1="12"
        y2="12"
      />
    </svg>
  </button>
</DocumentFragment>
`;
